# 522_lab3

./: .gitignore  clear_results.sh  graph_part_a.sh  graph_part_b.sh  lab_a.sh  lab_b.sh  lab_c.sh  out_inv_ball  out_inv_car  out_inv_heater  out_reachable_ball  out_reachable_car  out_reachable_heater  run_lab.py
lab_part_a/: bouncing_ball.pha
lab_part_a/outputs/: lab_a_.out  lab_a_0.817.out  lab_a_0.818.out  lab_a_0.820.out  lab_a_0.821.out  lab_a_0.822.out  lab_a_0.823.out  lab_a_0.824.out  lab_a_0.825.out  lab_a_0.828.out  lab_a_0.829.out  lab_a_0.830.out  lab_a_0.831.out  lab_a_0.832.out  lab_a_0.834.out  lab_a_0.835.out  lab_a_0.836.out  lab_a_0.838.out  lab_a_0.840.out  lab_a_0.841.out  lab_a_0.842.out  lab_a_0.843.out  lab_a_0.844.out  lab_a_0.847.out  lab_a_0.848.out  lab_a_0.849.out  lab_a_0.850.out  lab_a_0.851.out  lab_a_0.853.out  lab_a_0.854.out  lab_a_0.855.out  lab_a_0.856.out  lab_a_0.857.out  lab_a_0.858.out  lab_a_0.861.out  lab_a_0.864.out  lab_a_0.866.out  lab_a_0.867.out  lab_a_0.868.out  lab_a_0.869.out  (+87 more)
lab_part_b/: heater.pha  results.txt
lab_part_b/outputs/: lab_b_0.817.out  lab_b_0.818.out  lab_b_0.819.out  lab_b_0.820.out  lab_b_0.821.out  lab_b_0.822.out  lab_b_0.823.out  lab_b_0.824.out  lab_b_0.825.out  lab_b_0.826.out  lab_b_0.828.out  lab_b_0.829.out  lab_b_0.830.out  lab_b_0.831.out  lab_b_0.832.out  lab_b_0.834.out  lab_b_0.835.out  lab_b_0.836.out  lab_b_0.837.out  lab_b_0.838.out  lab_b_0.839.out  lab_b_0.840.out  lab_b_0.841.out  lab_b_0.842.out  lab_b_0.843.out  lab_b_0.844.out  lab_b_0.845.out  lab_b_0.846.out  lab_b_0.847.out  lab_b_0.848.out  lab_b_0.850.out  lab_b_0.851.out  lab_b_0.852.out  lab_b_0.853.out  lab_b_0.854.out  lab_b_0.855.out  lab_b_0.856.out  lab_b_0.857.out  lab_b_0.858.out  lab_b_0.859.out  (+134 more)
lab_part_c/: car.pha  results.txt
phaverlite-0.6/: Makefile.in  NEWS  README  TODO  aclocal.m4  config.lt  configure.ac  configure~  libtool  phaverlite-config.h.in
phaverlite-0.6/autom4te.cache/: output.0  requests  traces.0
phaverlite-0.6/m4/: ac_check_flint.m4  ac_check_gmp.m4
phaverlite-0.6/src/: Makefile.am  Makefile.in  PFunction.cc  PFunction.hh  automaton.cc  automaton.hh  automaton_compose.cc  automaton_reach.cc  automaton_refine.cc  clock_val_set.cc  clock_val_set.hh  convex_clock_val_set.cc  convex_clock_val_set.hh  deriv_def.cpp  deriv_def.h  deriv_def_osc.h  deriv_ops.cpp  deriv_ops.h  derivify.cpp  derivify.h  extended_pplite.cc  extended_pplite.hh  fp_interface.cpp  fp_interface.h  general.cc  general.hh  lexer.cc  lexer.ll  linear_vtef.cc  linear_vtef.hh  location.cc  location.hh  parameters.cc  parameters.hh  parser.cc  parser.hh  parser.yy  phaverlite.cc  rat_aff_expr.cc  rat_aff_expr.hh  (+27 more)
